# lab-dev-io

./: README.md
beagle_ros/: CMakeLists.txt~  package.xml  package.xml~
beagle_ros/launch/: beagle.launch  liquidrobot.launch~
beagle_ros/scripts/: master.py  master.py~  profileGenerator.py~  profileGeneratorStepper.py  serverBeagle.py  serverBeagle.py~  simulatorDCmotor.py  simulatorStepperMotor.py  simulatorStepperMotor.py~
beagle_simulink/analysis/linearizations/: ballandbeamDynSys.m  ballandbeamLinSys.m  furutaDynMat.m  furutaDynSys.m  linearize_ball_and_beam.m
beagle_simulink/controllers/DC_motor/: DC_motor_MRAC_c.slx  DC_motor_PIDAW_c.slx  DC_motor_PID_d.slx  DC_motor_feedback_d.slx  DC_motor_response.slx.r2015b
beagle_simulink/controllers/furuta_pendulum/: furuta_pendulum_response.slx  furuta_pendulum_response.slx.autosave  (+1 more)
beagle_simulink/identification/: DC_motor_identification.m  responsedata1.mat  responsedata2.mat
beagle_simulink/models/: ball_and_beam_c.slx  furuta_pendulum_c.slx  furuta_pendulum_d.slx
docs/: Makefile  make.bat
docs/source/: conf.py  hardware.rst  index.rst  notes.rst  pythonBeagle.rst
examples/communication_TCP/: README.md  TCPClientA.py  TCPClientB.py  TCPServer.py
examples/communication_UDP/: UDPClientA.py  UDPClientB.py
examples/communication_encoding/: encode-decode.py
examples/process_DC/: README.md  beagle_program.py  example_DC.py  host_program.py
modules/: __init__.py  pythonBeagle.py
simulink/: run_project.m
simulink/models/: DC_motor_c.slx  DC_motor_d.slx
tests/: testPythonBeagle.py
(+82 files in other folders)
