<?xml version="1.0"?>
<package>
  <name>beagle_ros</name>
  <version>0.0.0</version>
  <description>The beagle_project package</description>
  <maintainer email="marcusgreiff.93@hotmail.com">marcus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
